Fixed layout on small screens by hiding labels

--- a/src/main.css
+++ b/src/main.css
@@ -54,12 +54,6 @@ button:hover {
   max-width: 800px;
 }
 
-@media (max-width: 900px) {
-  .wrapper {
-    flex-direction: column;
-  }
-}
-
 .color-label {
   background: white;
   display: inline-block;
@@ -70,4 +64,14 @@ button:hover {
 
 .color:hover .color-label {
   opacity: 1;
+}
+
+@media (max-width: 900px) {
+  .wrapper {
+    flex-direction: column;
+  }
+
+  .color-label {
+    display: none;
+  }
 }
